<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.3</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>no.nav.bidrag</groupId>
  <artifactId>bidrag-beregn-forskudd-rest</artifactId>
  <version>0.0.88-SNAPSHOT</version>
  <name>bidrag-beregn-forskudd-rest</name>
  <description>Forskuddsberegning</description>

  <properties>
    <!-- build -->
    <build-helper-maven.version>3.3.0</build-helper-maven.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!-- dependencies -->
    <bidrag-commons.version>20230510130746_8b93e85</bidrag-commons.version>
    <bidrag-commons-test.version>1.20230217164307_1ec9d3f</bidrag-commons-test.version>
    <bidrag-beregn-felles.version>1.0.2</bidrag-beregn-felles.version>
    <bidrag-beregn-forskudd-core.version>1.1.0</bidrag-beregn-forskudd-core.version>
    <bidrag-domene.version>20231107094956_592b814</bidrag-domene.version>
    <bidrag-transport.version>20231106143153_847815b</bidrag-transport.version>
    <springdoc-openapi-ui.version>2.2.0</springdoc-openapi-ui.version>
    <wiremock-standalone.version>2.35.1</wiremock-standalone.version>
    <springframework-cloud.version>4.0.2</springframework-cloud.version>
    <token-support.version>3.1.3</token-support.version>
    <com.squareup.okhttp3.version>4.9.2</com.squareup.okhttp3.version>
    <okhttp3.version>4.9.2</okhttp3.version>
    <mockito-kotlin.version>4.1.0</mockito-kotlin.version>
    <kotest.version>5.6.2</kotest.version>
    <mockk.version>4.0.2</mockk.version>
    <!-- language -->
    <java.version>17</java.version>
    <kotlin.version>1.9.0</kotlin.version>
  </properties>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/navikt/bidrag-commons</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>2.0</version>
      </dependency>
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>2.2.15</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
<!--    <dependency>-->
<!--      <groupId>no.nav.bidrag</groupId>-->
<!--      <artifactId>bidrag-beregn-felles</artifactId>-->
<!--      <version>${bidrag-beregn-felles.version}</version>-->
<!--    </dependency>-->

    <dependency>
      <groupId>no.nav.bidrag</groupId>
      <artifactId>bidrag-beregn-forskudd-core</artifactId>
      <version>${bidrag-beregn-forskudd-core.version}</version>
    </dependency>

    <dependency>
      <groupId>no.nav.bidrag</groupId>
      <artifactId>bidrag-commons</artifactId>
      <version>${bidrag-commons.version}</version>
    </dependency>

    <dependency>
      <groupId>no.nav.bidrag</groupId>
      <artifactId>bidrag-transport</artifactId>
      <version>${bidrag-transport.version}</version>
    </dependency>

    <dependency>
      <groupId>no.nav.bidrag</groupId>
      <artifactId>bidrag-domene</artifactId>
      <version>${bidrag-domene.version}</version>
    </dependency>

    <dependency>
      <groupId>no.nav.security</groupId>
      <artifactId>token-client-spring</artifactId>
      <version>${token-support.version}</version>
    </dependency>

    <dependency>
      <groupId>no.nav.security</groupId>
      <artifactId>token-validation-spring</artifactId>
      <version>${token-support.version}</version>
    </dependency>

    <!-- test -->
    <dependency>
      <groupId>no.nav.bidrag</groupId>
      <artifactId>bidrag-commons-test</artifactId>
      <version>${bidrag-commons-test.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <dependency>
      <groupId>org.mockito.kotlin</groupId>
      <artifactId>mockito-kotlin</artifactId>
      <version>${mockito-kotlin.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-aop</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-oauth2-client</artifactId>
    </dependency>

    <dependency>
      <groupId>no.nav.security</groupId>
      <artifactId>token-validation-spring-test</artifactId>
      <version>${token-support.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- kotlin -->
    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-stdlib-jdk8</artifactId>
      <version>${kotlin.version}</version>
    </dependency>

    <!-- prometheus -->
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-core</artifactId>
    </dependency>

    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-registry-prometheus</artifactId>
    </dependency>

    <!-- swagger -->
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>${springdoc-openapi-ui.version}</version>
    </dependency>

    <!-- avhengigheter for lokal kjøring -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>

    <!-- test scope -->
    <dependency>
      <groupId>com.github.tomakehurst</groupId>
      <artifactId>wiremock-jre8-standalone</artifactId>
      <version>${wiremock-standalone.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
      <version>${springframework-cloud.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-collections</groupId>
          <artifactId>commons-collections</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>org.junit</groupId>
          <artifactId>junit-bom</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-test-junit5</artifactId>
      <version>${kotlin.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.kotest</groupId>
      <artifactId>kotest-assertions-core-jvm</artifactId>
      <version>${kotest.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.ninja-squad</groupId>
      <artifactId>springmockk</artifactId>
      <version>${mockk.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
    <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${project.parent.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-maven-plugin</artifactId>
        <version>${kotlin.version}</version>
        <executions>
          <execution>
            <id>compile</id>
            <phase>process-sources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>test-compile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <args>
            <arg>-Xjsr305=strict</arg>
          </args>
          <jvmTarget>17</jvmTarget>
          <compilerPlugins>
            <plugin>spring</plugin>
          </compilerPlugins>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-allopen</artifactId>
            <version>${kotlin.version}</version>
          </dependency>
          <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-maven-noarg</artifactId>
            <version>${kotlin.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>ktlint</id>
            <phase>verify</phase>
            <configuration>
              <target name="ktlint">
                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                  <arg value="src/**/*.kt"/>
                </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
          <execution>
            <id>ktlint-format</id>
            <phase>validate</phase>
            <configuration>
              <target name="ktlint">
                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true" classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                  <jvmarg value="--add-opens"/>
                  <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                  <arg value="-F"/>
                  <arg value="src/**/*.kt"/>
                </java>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.pinterest</groupId>
            <artifactId>ktlint</artifactId>
            <version>0.47.1</version>
          </dependency>
          <!-- additional 3rd party ruleset(s) can be specified here -->
        </dependencies>
      </plugin>
    </plugins>
  </build>

</project>
